# ckanext-dbca

./: MANIFEST.in  README.md  setup.cfg  setup.py  test.ini
.github/workflows/: test.yml
ckanext/dbca/: cli.py  db_log_handler.py  dbca_dataset.yaml  dbca_presets.json  geospatial_coverage.json  helpers.py  model.py  plugin.py  views.py
ckanext/dbca/assets/: dbca-ol-preview-override.js  dbca-spatial-field.css  dbca-spatial-field.js  dbca.css  dbca.js  webassets.yml
ckanext/dbca/config/: resource_formats.json
ckanext/dbca/logic/: action.py  auth.py  schema.py  validators.py
ckanext/dbca/migration/dbca/: alembic.ini
ckanext/dbca/migration/dbca/versions/: 94a5398db0ed_initialise_dbca_spatial_model.py  e50f91110459_initislise_dbca_logs.py
ckanext/dbca/public/: dbca_dev.css
ckanext/dbca/public/javascript/modules/: dbca-spatial-form.js
ckanext/dbca/public/js/: spatial_form.js
ckanext/dbca/public/js/modules/: dbca-ol-preview-override.js  dbca-spatial-form.js
ckanext/dbca/templates/: base.html  error_document_template.html  footer.html  header.html
ckanext/dbca/templates/admin/: config.html
ckanext/dbca/templates/dataviewer/: openlayers.html
ckanext/dbca/templates/doi/snippets/: package_citation.html  resource_citation.html
ckanext/dbca/templates/emails/bodies/: scheduled_dataset_notification.txt
ckanext/dbca/templates/home/: layout3.html
ckanext/dbca/templates/package/: edit.html  read_base.html  search.html
ckanext/dbca/templates/snippets/: collection_notice_sidebar.html  social.html
ckanext/dbca/templates/user/: login.html
ckanext/dbca/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext/dbca/tests/logic/: test_action.py  test_auth.py  test_validators.py
(+11 files in other folders)
