[metadata]
name = ckanext-dbca
version = 0.0.1
description = A CKAN extension for DBCA
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dbca-wa/ckanext-dbca
author = Florian Mayer
author_email = Florian.Mayer@dbca.wa.gov.au
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             dbca = ckanext.dbca.plugin:DbcaPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/dbca/i18n/ckanext-dbca.pot
width = 80

[init_catalog]
domain = ckanext-dbca
input_file = ckanext/dbca/i18n/ckanext-dbca.pot
output_dir = ckanext/dbca/i18n

[update_catalog]
domain = ckanext-dbca
input_file = ckanext/dbca/i18n/ckanext-dbca.pot
output_dir = ckanext/dbca/i18n
previous = true

[compile_catalog]
domain = ckanext-dbca
directory = ckanext/dbca/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini /etc/ckan/ckan.ini
